fixed counter issue not showing correct number with pasted values

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -5,7 +5,6 @@
 
 .tweet {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
 }
 
@@ -34,6 +33,10 @@ article {
   border: 4px solid rgb(83, 80, 74);
   padding: 25px;
   margin-top: 20px;
+}
+
+footer {
+  word-wrap: break-word;
 }
 
 footer .tweet {
